# router-gateway

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .editorconfig  .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .gitleaks.toml  .nextest.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.patch  Dockerfile.template  README-WORKSPACE.md  README.md  ROADMAP.md  SECURITY.md  clippy.toml  codecov.yml  create_sub_agents.py  deny.toml  gateway.yaml  gateway.yaml.example  justfile  lefthook.yml  package.json  patch_agents.py  patch_agents_fix.py  patch_agents_restructure.py  progress.txt  rustfmt.toml  skills-lock.json  tsconfig.base.json  tsconfig.json  (+1 more)
apps/cli/: AGENTS.md  Cargo.toml  README.md
apps/cli/src/: main.rs
apps/cli/tests/: cli_integration.rs
apps/gateway/: AGENTS.md  Cargo.toml  README.md
apps/gateway/src/: app.rs  config.rs  lib.rs  main.rs  routes.rs  state.rs
apps/gateway/src/providers/: anthropic.rs  google.rs  mod.rs  openai.rs  types.rs
apps/gateway/tests/: e2e_auth.rs  e2e_health.rs  e2e_routing.rs  integration_test.rs
apps/gateway/tests/common/: mod.rs
cli/: AGENTS.md  Cargo.toml
cli/src/: main.rs
cli/tests/: cli_integration.rs
crates/gateway/: AGENTS.md  Cargo.toml  README.md
crates/gateway-utils/: AGENTS.md  Cargo.toml
crates/gateway-utils/src/: env.rs  lib.rs  security.rs  ssrf.rs
crates/gateway/src/: config.rs  lib.rs  main.rs  routes.rs  state.rs
crates/gateway/src/providers/: anthropic.rs  google.rs  openai.rs
crates/gateway/tests/: config.rs  e2e.rs  podman_e2e_tests.rs  routes.rs  snapshot_tests.rs
crates/gateway/tests/common/: mod.rs
crates/gateway/tests/e2e/: common  mod.rs  podman_e2e_tests.rs
crates/gateway/tests/snapshots/: snapshot_tests__snapshot_chat_completion_response_structure.snap  snapshot_tests__snapshot_classification_output_text_request.snap  snapshot_tests__snapshot_classification_output_tool_request.snap  snapshot_tests__snapshot_classification_output_vision_request.snap  snapshot_tests__snapshot_config_with_credentials.snap  snapshot_tests__snapshot_credential_minimal_fields.snap  snapshot_tests__snapshot_credential_with_all_fields.snap  snapshot_tests__snapshot_default_config.snap  snapshot_tests__snapshot_default_routing_policy.snap  snapshot_tests__snapshot_default_server_config.snap  snapshot_tests__snapshot_error_response_config_error.snap  snapshot_tests__snapshot_error_response_missing_auth.snap  snapshot_tests__snapshot_error_response_no_route.snap  snapshot_tests__snapshot_error_response_rate_limit.snap  snapshot_tests__snapshot_error_response_unauthorized.snap  snapshot_tests__snapshot_full_config_all_sections.snap  snapshot_tests__snapshot_health_status_degraded.snap  snapshot_tests__snapshot_health_status_healthy.snap  snapshot_tests__snapshot_health_status_no_credentials.snap  snapshot_tests__snapshot_minimal_yaml_config.snap  snapshot_tests__snapshot_model_info_minimal.snap  snapshot_tests__snapshot_model_info_wildcard.snap  snapshot_tests__snapshot_model_info_with_capabilities.snap  snapshot_tests__snapshot_models_response_empty.snap  snapshot_tests__snapshot_models_response_with_credentials.snap  snapshot_tests__snapshot_multiple_providers_config.snap  snapshot_tests__snapshot_root_response_structure.snap  snapshot_tests__snapshot_routing_policy_adaptive.snap  snapshot_tests__snapshot_routing_policy_policy_aware.snap  snapshot_tests__snapshot_routing_policy_quota_aware.snap  snapshot_tests__snapshot_routing_policy_time_aware.snap  snapshot_tests__snapshot_routing_policy_weighted.snap
crates/llm-tracing/: AGENTS.md  Cargo.toml  README.md
crates/llm-tracing/src/: collector.rs  lib.rs  metrics.rs  middleware.rs  trace.rs
crates/llm-tracing/tests/: integration_test.rs  integration_test_comprehensive.rs  integration_tests.rs
crates/model-registry/: AGENTS.md  Cargo.toml
crates/model-registry/src/: categories.rs  fetcher.rs  info.rs  lib.rs
crates/model-registry/src/policy/: matcher.rs  matcher_tests.rs  registry.rs  tests.rs  types.rs
crates/model-registry/src/registry/: mod.rs  operations.rs  tests.rs
crates/smart-routing/: AGENTS.md  Cargo.toml
crates/smart-routing/src/: candidate.rs  executor.rs  filtering.rs  history.rs  lib.rs  metrics.rs  outcome.rs  policy_weight.rs  reasoning.rs  session.rs  statistics.rs  utility.rs
crates/smart-routing/src/bandit/: exploration.rs  mod.rs  tests.rs
crates/smart-routing/src/classification/: format.rs  mod.rs  token.rs
crates/smart-routing/src/config/: mod.rs  time_quota.rs
crates/smart-routing/src/fallback/: mod.rs  planning.rs  tests.rs
crates/smart-routing/src/health/: mod.rs  state_machine.rs  tests.rs
crates/smart-routing/src/router/: dispatch.rs  mod.rs  tests.rs
crates/smart-routing/src/selector/: mod.rs  ranking.rs  tests.rs
crates/smart-routing/src/sqlite/: collectors.rs  error.rs  selector.rs  tests.rs
crates/smart-routing/src/weight/: calculator.rs  tests.rs  types.rs
crates/smart-routing/tests/: bdd_integration_tests.rs  cucumber_bdd.rs  snapshot_tests.rs
crates/smart-routing/tests/bdd/: bandit.rs  classification.rs  fallback.rs  health.rs  mod.rs  routing.rs
crates/smart-routing/tests/snapshots/: snapshot_tests__snapshot_tests__snapshot_capability_support_all_missing.snap  snapshot_tests__snapshot_tests__snapshot_capability_support_description_missing_multiple.snap  snapshot_tests__snapshot_tests__snapshot_capability_support_description_missing_vision.snap  snapshot_tests__snapshot_tests__snapshot_capability_support_description_supported.snap  snapshot_tests__snapshot_tests__snapshot_capability_support_missing_tools_and_thinking.snap  snapshot_tests__snapshot_tests__snapshot_capability_support_missing_vision.snap  snapshot_tests__snapshot_tests__snapshot_capability_support_supported.snap  snapshot_tests__snapshot_tests__snapshot_classified_request_all_capabilities.snap  (+73 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: config_parse_fuzz.rs  ssrf_url_fuzz.rs  token_match_fuzz.rs
(+209 files in other folders)
