[workspace]
resolver = "2"
members = [
    "apps/cli",
    "apps/gateway",
    "packages/smart-routing",
    "packages/model-registry",
    "packages/tracing"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/proxy/gateway"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP/Web
axum = "0.7"
tower = "0.5"
tower-http = "0.5"
http = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }

# Internal packages
smart-routing = { path = "packages/smart-routing", version = "0.1.0" }
model-registry = { path = "packages/model-registry", version = "0.1.0" }
llm-tracing = { path = "packages/tracing", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
# Base rules
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }

# Specific rules based on references/Codex rules
collapsible_if = "deny"
uninlined_format_args = "deny"
redundant_closure_for_method_calls = "deny"
manual_range_contains = "deny"
unwrap_used = "deny"
expect_used = "allow"
panic = "deny"
todo = "warn"
clone_on_ref_ptr = "deny"

# Exceptions (allow) for pedantic rules that conflict with design decisions
# Priority 1 to override pedantic = "deny" (priority -1) and all = "warn" (priority -1)
module_name_repetitions = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
# Correct names for pedantic lints
return_self_not_must_use = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
cast_lossless = { level = "allow", priority = 1 }
unused_async = { level = "warn", priority = 1 }
similar_names = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
# Remaining pedantic lints with pre-existing violations
float_cmp = { level = "allow", priority = 1 }
manual_string_new = { level = "allow", priority = 1 }
match_same_arms = { level = "allow", priority = 1 }
items_after_statements = { level = "allow", priority = 1 }
no_effect_underscore_binding = { level = "allow", priority = 1 }
used_underscore_binding = { level = "allow", priority = 1 }
single_char_pattern = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
implicit_clone = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
trivially_copy_pass_by_ref = { level = "allow", priority = 1 }
match_bool = { level = "allow", priority = 1 }
manual_let_else = { level = "allow", priority = 1 }
redundant_pattern_matching = { level = "allow", priority = 1 }
map_unwrap_or = { level = "allow", priority = 1 }
semicolon_if_nothing_returned = { level = "allow", priority = 1 }
needless_return = { level = "allow", priority = 1 }
# unused_self requires API changes; address separately
# significant_drop_tightening (nursery): read-lock-through-iteration is idiomatic for caches
# future_not_send (nursery): rusqlite's RefCell in rows is not Sync — not our code
significant_drop_tightening = { level = "allow", priority = 1 }
future_not_send = { level = "allow", priority = 1 }
unreadable_literal = { level = "allow", priority = 1 }
many_single_char_names = { level = "allow", priority = 1 }
default_trait_access = { level = "allow", priority = 1 }
match_wildcard_for_single_variants = { level = "allow", priority = 1 }
self_only_used_in_recursion = { level = "allow", priority = 1 }
or_fun_call = { level = "allow", priority = 1 }
useless_let_if_seq = { level = "allow", priority = 1 }
unused_self = { level = "allow", priority = 1 }
