[package]
name = "gateway"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Local LLM gateway for intelligent request routing"
repository = "https://github.com/proxy/gateway"
rust-version = "1.85"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gateway"
path = "src/main.rs"

[[bin]]
name = "gateway-cli"
path = "src/bin/cli.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7"
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP/Web
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "set-header"] }
http = "1.0"
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
tabled = "0.15"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
subtle = "2.6"
url = "2.5"
rand = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Validation
jsonschema = "0.22"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"
wiremock = "0.6"
rstest = "0.25"
pretty_assertions = "1.4"
http-body-util = "0.1"

# Snapshot testing
insta = { version = "1.42", features = ["yaml", "json", "redactions"] }

# Property-based testing
proptest = "1.6"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }

# Production quality gates
collapsible_if = "deny"
uninlined_format_args = "deny"
redundant_closure_for_method_calls = "deny"
manual_range_contains = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
clone_on_ref_ptr = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"

# Casting: precision loss is acceptable for metric calculations, token counts, and costs
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
