[package]
name = "my-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI management utility for the LLM gateway"
readme = "README.md"
keywords = ["cli", "gateway", "llm", "management"]
categories = ["command-line-utilities"]
repository.workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
colored = "2.1"
tabled = "0.15"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"
wiremock = "0.6"

[lints]
workspace = true
