[package]
name = "gateway-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
gateway = { path = ".." }

[[bin]]
name = "ssrf_url_fuzz"
path = "fuzz_targets/ssrf_url_fuzz.rs"

[[bin]]
name = "config_parse_fuzz"
path = "fuzz_targets/config_parse_fuzz.rs"

[[bin]]
name = "token_match_fuzz"
path = "fuzz_targets/token_match_fuzz.rs"
