[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors", "set-header"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4"] }
subtle = "2.6"
url = "2.5"

# Local packages
smart-routing = { path = "../../packages/smart-routing", version = "0.1.0" }
model-registry = { path = "../../packages/model-registry", version = "0.1.0" }
llm-tracing = { path = "../../packages/tracing", version = "0.1.0" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
rstest = "0.25"
pretty_assertions = "1.4"
tempfile = "3"
