[package]
name = "gateway-utils"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shared utilities for the gateway workspace"
readme = "../../README.md"
keywords = ["utilities", "gateway", "helpers"]
categories = ["no-std"]
repository.workspace = true

[dependencies]
subtle = "2.6"
url = "2.5"
thiserror = "1.0"

[dev-dependencies]
rstest = "0.25"
pretty_assertions = "1.4"

[lints]
workspace = true
