[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Local LLM gateway for intelligent request routing"
readme = "README.md"
keywords = ["gateway", "llm", "routing", "proxy"]
categories = ["web-programming::http-server"]
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "cors", "set-header"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
openssl-sys = { workspace = true }
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4"] }

# Local packages
gateway-utils = { path = "../gateway-utils", version = "0.1.0" }
smart-routing = { path = "../smart-routing", version = "0.1.0" }
model-registry = { path = "../model-registry", version = "0.1.0" }
llm-tracing = { path = "../llm-tracing", version = "0.1.0" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
rstest = "0.25"
pretty_assertions = "1.4"
tempfile = "3"

[lints]
workspace = true
