[package]
name = "llm-tracing"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tracing and observability middleware for LLM requests"
readme = "README.md"
keywords = ["tracing", "observability", "llm", "middleware"]
categories = ["development-tools::debugging"]
repository.workspace = true

[dependencies]
tokio = { version = "1.40", features = ["sync", "time"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tower = "0.5"
axum = "0.7"
http = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.40", features = ["sync", "time", "macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
rstest = "0.25"
pretty_assertions = "1.4"

[lints]
workspace = true
