[package]
name = "model-registry"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "LLM model registry with multi-dimensional classification"
readme = "README.md"
keywords = ["registry", "llm", "models", "classification"]
categories = ["data-structures"]
repository.workspace = true

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
jsonschema = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt", "sync", "time"] }
tokio-util = { version = "0.7" }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
