[package]
name = "smart-routing"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
model-registry = { path = "../model-registry", version = "0.1.0" }
futures = "0.3.32"
