[package]
name = "smart-routing"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Intelligent LLM request routing with health-aware credential selection"
readme = "README.md"
keywords = ["routing", "llm", "load-balancing", "smart"]
categories = ["algorithms"]
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["sync", "time", "rt", "rt-multi-thread", "macros"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
model-registry = { path = "../model-registry", version = "0.1.0" }
futures = "0.3.32"

[dev-dependencies]
rstest = "0.25"
pretty_assertions = "1.4"
tempfile = "3"

[lints]
workspace = true
